Add background tags component

--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -33,6 +33,10 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;800&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap"
+      rel="stylesheet"
+    />
     <title>Portfolio</title>
     <script
       src="https://kit.fontawesome.com/d17a5336b4.js"
