--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Portfolio Website" />
-    <link
+    <!-- <link
       rel="apple-touch-icon"
       sizes="180x180"
       href="%PUBLIC_URL%/favicon_io/apple-touch-icon.png"
@@ -15,12 +15,18 @@
       type="image/png"
       sizes="32x32"
       href="%PUBLIC_URL%/favicon_io/favicon-32x32.png"
-    />
-    <link
+    /> -->
+    <!-- <link
       rel="icon"
       type="image/png"
       sizes="16x16"
       href="%PUBLIC_URL%/favicon_io/favicon-16x16.png"
+    /> -->
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      sizes="16x16"
+      href="./images/svg/logo2.svg"
     />
     <!-- <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" /> -->
     <link
@@ -37,11 +43,12 @@
       href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap"
       rel="stylesheet"
     />
-    <title>Portfolio</title>
+
     <script
       src="https://kit.fontawesome.com/d17a5336b4.js"
       crossorigin="anonymous"
     ></script>
+    <title>Alex Colbourn</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
