Add sun and bloom

--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Portfolio Website" />
+    <meta
+      name="description"
+      content="React Web Developer and Robotics Engineer Portfolio.  Please contact me for full time or freelance opportunities."
+    />
 
     <link
       rel="icon"
@@ -12,21 +15,12 @@
       sizes="16x16"
       href="./images/svg/logo2.svg"
     />
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" /> -->
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <!-- <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;800&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap"
-      rel="stylesheet"
-    /> -->
     <link
       href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Montserrat&family=Syncopate&display=swap"
       rel="stylesheet"
@@ -36,7 +30,7 @@
       src="https://kit.fontawesome.com/d17a5336b4.js"
       crossorigin="anonymous"
     ></script>
-    <title>Alex Colbourn</title>
+    <title>Alex Colbourn Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
