Implement theme context throughout

--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -22,7 +22,7 @@
       crossorigin="anonymous"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Montserrat&family=Syncopate&display=swap"
+      href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Montserrat:wght@400;500&family=Syncopate&display=swap"
       rel="stylesheet"
     />
     <script
