--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -25,6 +25,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Syncopate&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Cabin&family=Cardo&family=Karla&family=Lora&family=Merriweather&family=Rubik&family=Work+Sans&display=swap" rel="stylesheet">
     <script
       src="https://kit.fontawesome.com/d17a5336b4.js"
       crossorigin="anonymous"
