--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -22,9 +22,9 @@
       crossorigin="anonymous"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Syncopate&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Syncopate&display=swap"
       rel="stylesheet"
-    />  
+    />
     <script
       src="https://kit.fontawesome.com/d17a5336b4.js"
       crossorigin="anonymous"
